--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -13,7 +13,7 @@
   <string name="davx5">DAVx⁵</string>
   <string name="decsync">DecSync CC</string>
   <string name="tasks_org">Tasks.org</string>
-  <string name="microsoft">Microsoft To Do</string>
+  <string name="microsoft">Microsoft To&#xA0;Do</string>
   <string name="etebase_url">https://api.etebase.com/partner/tasksorg/</string>
   <string name="help_url_sync">https://tasks.org/sync</string>
   <string name="caldav_server_owncloud">ownCloud</string>
@@ -99,7 +99,6 @@
   <string name="p_tags_enabled">drawer_tags_enabled</string>
   <string name="p_tags_hide_unused">drawer_tags_hide_unused</string>
   <string name="p_places_enabled">drawer_places_enabled</string>
-  <string name="p_lists_enabled">drawer_lists_enabled</string>
   <string name="p_places_hide_unused">drawer_places_hide_unused</string>
 
   <!-- show comments in task edit -->
@@ -411,6 +410,7 @@
   <string name="param_result">result</string>
   <string name="param_state">state</string>
   <string name="param_click">click</string>
+  <string name="param_selection">selection</string>
   <string name="event_todoagenda">cp_todoagenda</string>
   <string name="event_astrid2taskprovider">cp_astrid2taskprovider</string>
   <string name="event_sync_add_account">sync_add_account</string>
@@ -422,6 +422,7 @@
   <string name="event_request_review">request_review</string>
   <string name="event_create_shortcut">create_shortcut</string>
   <string name="event_create_widget">create_widget</string>
+  <string name="event_onboarding_sync">onboarding_sync</string>
   <string name="param_type">type</string>
   <string name="p_picker_mode_date">picker_mode_date</string>
   <string name="p_picker_mode_time">picker_mode_time</string>
@@ -429,7 +430,6 @@
   <string name="p_completed_tasks_at_bottom">completed_tasks_at_bottom</string>
   <string name="p_shown_beast_mode_hint">shown_beast_mode_hint</string>
   <string name="p_last_sync">last_sync_time</string>
-  <string name="p_microsoft_sync">microsoft_sync</string>
   <string name="p_multiline_title">multiline_title</string>
   <string name="p_dynamic_color">dynamic_color</string>
 </resources>
