--- a/app/src/main/res/layout/fragment_task_edit_empty.xml
+++ b/app/src/main/res/layout/fragment_task_edit_empty.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent"
-  android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    android:background="?attr/colorSurface"
+
+    android:orientation="vertical">
 
   <include
-    android:id="@+id/toolbar"
-    layout="@layout/toolbar" />
+      android:id="@+id/toolbar"
+      layout="@layout/toolbar" />
 
 </LinearLayout>
