Restore widget update period

--- a/app/src/main/res/xml/scrollable_widget_provider_info.xml
+++ b/app/src/main/res/xml/scrollable_widget_provider_info.xml
@@ -13,6 +13,6 @@
   android:minResizeWidth="110dp"
   android:minWidth="110dp"
   android:resizeMode="horizontal|vertical"
-  android:updatePeriodMillis="0"
+  android:updatePeriodMillis="1800000"
   android:widgetCategory="keyguard|home_screen"
   tools:ignore="UnusedAttribute"/>
