--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -36,8 +36,9 @@
   <string name="url_filters">https://tasks.org/filters</string>
   <string name="url_documentation">https://tasks.org/</string>
   <string name="url_issue_tracker">https://github.com/tasks/tasks/issues</string>
+  <string name="url_changelog">https://tasks.org/changelog</string>
   <string name="url_source_code">https://tasks.org/source</string>
-  <string name="url_privacy_policy">https://tasks.org/privacy.html</string>
+  <string name="url_privacy_policy">https://tasks.org/privacy</string>
   <string name="url_backups">https://tasks.org/backups</string>
   <string name="url_translations">https://tasks.org/translations</string>
   <string name="url_notifications">https://tasks.org/notifications</string>
