--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -398,6 +398,7 @@
   <string name="p_current_version">cv</string>
   <string name="p_install_version">install_version</string>
   <string name="p_install_date">install_date</string>
+  <string name="p_device_install_version">device_install_version</string>
   <string name="p_default_location">default_location</string>
   <string name="p_warn_notifications_disabled">warn_notifications_disabled</string>
   <string name="p_warn_alarms_disabled">warn_alarms_disabled</string>
