Replace Firebase Analytics with PostHog

--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -427,7 +427,22 @@
   <string name="event_onboarding_sync">onboarding_sync</string>
   <string name="event_accept_tos">accept_tos</string>
   <string name="event_accept_tos_update">accept_tos_update</string>
+  <string name="event_onboarding_complete">onboarding_complete</string>
+  <string name="event_screen_settings">screen_settings</string>
+  <string name="event_create_tag">create_tag</string>
+  <string name="event_create_filter">create_filter</string>
+  <string name="event_create_place">create_place</string>
+  <string name="event_create_list">create_list</string>
+  <string name="event_search">search</string>
+  <string name="event_sort_change">sort_change</string>
+  <string name="event_screen_welcome">screen_welcome</string>
+  <string name="event_screen_add_account">screen_add_account</string>
+  <string name="event_settings_navigation">settings_navigation</string>
+  <string name="event_import_backup_failed">import_backup_failed</string>
   <string name="param_type">type</string>
+  <string name="param_screen">screen</string>
+  <string name="param_error">error</string>
+  <string name="param_value">value</string>
   <string name="p_picker_mode_date">picker_mode_date</string>
   <string name="p_picker_mode_time">picker_mode_time</string>
   <string name="p_markdown">markdown</string>
