--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -417,6 +417,8 @@
   <string name="event_todoagenda">cp_todoagenda</string>
   <string name="event_astrid2taskprovider">cp_astrid2taskprovider</string>
   <string name="event_sync_add_account">sync_add_account</string>
+  <string name="event_initial_sync_complete">initial_sync_complete</string>
+  <string name="param_task_count">task_count</string>
   <string name="event_sync_unknown_access">sync_unknown_access</string>
   <string name="event_banner_beast">banner_beast</string>
   <string name="event_banner_sub">banner_subscribe</string>
