--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -181,18 +181,6 @@
     <item>3</item>
   </string-array>
 
-  <string-array name="EPr_default_reminders_values">
-    <!-- reminders: values that map EPr_default_reminders items to reminder flags. -->
-    <item>32</item> <!-- when started -->
-    <item>2</item> <!-- when due -->
-    <item>4</item> <!-- when overdue -->
-  </string-array>
-
-  <string-array name="EPr_default_reminders_default">
-    <item>1</item> <!-- when due -->
-    <item>2</item> <!-- when overdue -->
-  </string-array>
-
   <string-array name="EPr_default_reminders_mode_values">
     <!-- reminders: values that map EPr_default_reminders items to reminder flags. -->
     <item>0</item>
@@ -208,6 +196,7 @@
 
   <!-- default reminders setting (corresponds to reminder flags) -->
   <string name="p_default_reminders_key">p_def_reminders_v2</string>
+  <string name="p_default_alarms">p_default_alarms</string>
   <string name="p_default_location_reminder_key">p_def_location_reminders</string>
 
   <!-- default reminder mode setting (corresponds to entry in TEA_reminder_mode_once, TEA_reminder_mode_five, TEA_reminder_mode_nonstop) -->
