--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -413,7 +413,8 @@
   <string name="param_result">result</string>
   <string name="param_state">state</string>
   <string name="param_order_id">order_id</string>
-  <string name="param_click">click</string>
+  <string name="param_action">action</string>
+  <string name="param_label">label</string>
   <string name="param_selection">selection</string>
   <string name="event_todoagenda">cp_todoagenda</string>
   <string name="event_astrid2taskprovider">cp_astrid2taskprovider</string>
@@ -421,8 +422,7 @@
   <string name="event_initial_sync_complete">initial_sync_complete</string>
   <string name="param_task_count">task_count</string>
   <string name="event_sync_unknown_access">sync_unknown_access</string>
-  <string name="event_banner_beast">banner_beast</string>
-  <string name="event_banner_sub">banner_subscribe</string>
+  <string name="event_banner">banner</string>
   <string name="event_add_task">add_task</string>
   <string name="event_complete_task">complete_task</string>
   <string name="event_request_review">request_review</string>
