--- a/app/src/main/res/xml/preferences_navigation_drawer.xml
+++ b/app/src/main/res/xml/preferences_navigation_drawer.xml
@@ -2,13 +2,15 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
   android:key="@string/preference_screen">
 
-    <Preference
-        android:summary="@string/customize_drawer_summary"
-        android:title="@string/customize_drawer">
+    <org.tasks.preferences.IconPreference
+        android:key="@string/customize_drawer"
+        android:title="@string/customize_drawer"
+        android:layout="@layout/preference_icon"
+        android:summary="@string/customize_drawer_summary">
         <intent
             android:targetClass="org.tasks.activities.NavigationDrawerCustomization"
             android:targetPackage="@string/app_package" />
-    </Preference>
+    </org.tasks.preferences.IconPreference>
 
     <PreferenceCategory android:title="@string/filters">
 
